[metadata]
name = goetia
description = streaming de Bruijn graph compaction and sketching.
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
url = https://github.com/camillescott/goetia
author = Camille Scott
author_email = cswel@ucdavis.edu
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: C++"
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-informatics

[options]
packages = find:
include_package_data = True
zip_safe = False
platforms = any
install_requires = 
    plotille
python_requires = >=3.6

[options.packages.find]
exlude =
    tests

[options.entry_points]
console_scripts = 
    goetia = goetia.__main__:main

[bdist_wheel]
universal=0
